--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Trung's blog
 author:
-  name: trunghng
+  name: Trung H. Nguyen
   email: trung.skipper@gmail.com  
 description: > # this means to ignore newlines until "show_excerpts:"
   To document something I've learned
