--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
   To document something I've learned
 
 show_excerpts: true # set to true to show excerpts on the homepage
+excerpt_separator: <!-- excerpt-end -->
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
