edit posts + add comments section

--- a/config.yml
+++ b/config.yml
@@ -42,7 +42,7 @@ params:
   UseHugoToc: true
   disableSpecial1stPost: false
   disableScrollToTop: false
-  comments: false
+  comments: true
   hidemeta: false
   hideSummary: false
   showtoc: true
@@ -104,6 +104,7 @@ params:
     hidden: true # hide everywhere but not in structured data
     hiddenInList: true # hide on list pages and home
     hiddenInSingle: true # hide on single page
+    linkFullImages: true
 
   editPost:
     URL: # "https://github.com/trunghng/trunghng.github.io/content"
